src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Actual_Attending_Students__c</fullName>
        <description>Actual number of students that attended a school visit</description>
        <label>Actual Attending Students</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assignee_Role__c</fullName>
        <defaultValue>$UserRole.Name</defaultValue>
        <description>Copy of the assignee&apos;s role at the time the task is created</description>
        <label>Assignee Role</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallAnsweredTime__c</fullName>
        <label>CallAnsweredTime</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallDisconnectedTime__c</fullName>
        <label>CallDisconnectedTime</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallInitiatedTime__c</fullName>
        <label>CallInitiatedTime</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallWrapupTime__c</fullName>
        <label>CallWrapupTime</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Attempt_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for MonTRACK functionality.</description>
        <label>Call Attempt Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Attempt__c</fullName>
        <description>Used for MonTRACK functionality, captures the number of times a student has been called.</description>
        <label>Call Attempt</label>
        <picklist>
            <picklistValues>
                <fullName>First Attempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second Attempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Attempt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Back_Date_Time__c</fullName>
        <description>Used for MonTRACK functionality, captures when a MonTRACK user (SSA) should call back a student.</description>
        <label>Call Back Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <label>Campus</label>
        <picklist>
            <picklistValues>
                <fullName>Berwick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caulfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clayton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gippsland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parkville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peninsula</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_Level_1__c</fullName>
        <description>when populated and task is linked to a case, this field will be copied over to its case equivalent.</description>
        <label>Category Level 1</label>
        <picklist>
            <picklistValues>
                <fullName>Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airport Pickup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archive Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campus Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of preference (COP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crisis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directions/Maps/Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distance Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolment - Current Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolment Questionnaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entry Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exams &amp; Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed ID Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fees &amp; Financial Matters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Student Course Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Host Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_Level_2__c</fullName>
        <description>when populated and task is linked to a case, this field will be copied over to its case equivalent.</description>
        <label>Category Level 2</label>
        <picklist>
            <picklistValues>
                <fullName>Abandoned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Dress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access Monash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accomodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACS Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACS Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACS Results</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Standing/Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AHEGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airport Reception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allocate+/MUTTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allocate+ Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alt Exit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Deadline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application for Participant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Supporting Docs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assignment Submissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATAR score requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AusAid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authcate/Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bourke St Closure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign call back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campus/ Campus tour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed_Date_Time__c</fullName>
        <label>Completed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Completed_Hour__c</fullName>
        <formula>IF( 

(VALUE(MID(TEXT(Completed_Date_Time__c ), 12, 2))) &gt; 12, 

TEXT(VALUE(MID(TEXT(Completed_Date_Time__c ), 12, 2)) - 12) + &quot;:00&quot;, 

TEXT(VALUE(MID(TEXT(Completed_Date_Time__c ), 12, 2)) + 12) + &quot;:00&quot; 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed Hour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <description>copied from Contact for Montrack reporting purposes</description>
        <label>Course Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <description>copied from Contact for Montrack reporting purposes</description>
        <label>Course Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The course that this task may relate to.  This is in addition to the system who and what fields</description>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Hour__c</fullName>
        <formula>IF( 

(VALUE(MID(TEXT(CreatedDate), 12, 2))) &lt; 12, 

TEXT(VALUE(MID(TEXT(CreatedDate), 12, 2)) +10) + &quot;:00&quot; ,
TEXT(VALUE(MID(TEXT(CreatedDate), 12, 2)) - 14) + &quot;:00&quot;

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Hour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration_mins__c</fullName>
        <description>Captures the length of a call with a student.</description>
        <label>Duration (mins)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duration_mins_numeric__c</fullName>
        <formula>CASE(Duration_mins__c,
&quot;1&quot;, 1,
&quot;2&quot;, 2,
&quot;3&quot;, 3,
&quot;4&quot;, 4,
&quot;5&quot;, 5,
&quot;6&quot;, 6,
&quot;7&quot;, 7,
&quot;8&quot;, 8,
&quot;9&quot;, 9,
&quot;10&quot;, 10,

&quot;11&quot;, 11,
&quot;12&quot;, 12,
&quot;13&quot;, 13,
&quot;14&quot;, 14,
&quot;15&quot;, 15,
&quot;16&quot;, 16,
&quot;17&quot;, 17,
&quot;18&quot;, 18,
&quot;19&quot;, 19,
&quot;20&quot;, 20,

&quot;21&quot;, 21,
&quot;22&quot;, 22,
&quot;23&quot;, 23,
&quot;24&quot;, 24,
&quot;25&quot;, 25,
&quot;26&quot;, 26,
&quot;27&quot;, 27,
&quot;28&quot;, 28,
&quot;29&quot;, 29,
&quot;30&quot;, 30,

&quot;31&quot;, 31,
&quot;32&quot;, 32,
&quot;33&quot;, 33,
&quot;34&quot;, 34,
&quot;35&quot;, 35,
&quot;36&quot;, 36,
&quot;37&quot;, 37,
&quot;38&quot;, 38,
&quot;39&quot;, 39,
&quot;40&quot;, 40,

&quot;41&quot;, 41,
&quot;42&quot;, 42,
&quot;43&quot;, 43,
&quot;44&quot;, 44,
&quot;45&quot;, 45,
&quot;46&quot;, 46,
&quot;47&quot;, 47,
&quot;48&quot;, 48,
&quot;49&quot;, 49,
&quot;50&quot;, 50,

&quot;51&quot;, 51,
&quot;52&quot;, 52,
&quot;53&quot;, 53,
&quot;54&quot;, 54,
&quot;55&quot;, 55,
&quot;56&quot;, 56,
&quot;57&quot;, 57,
&quot;58&quot;, 58,
&quot;59&quot;, 59,
&quot;60&quot;, 60,

0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (mins-numeric)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <description>Status of the event</description>
        <label>Event Status</label>
        <picklist>
            <picklistValues>
                <fullName>Created or Unassigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Faculty__c</fullName>
        <description>copied over from contact for purpose of Montrack reporting</description>
        <label>Faculty</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>copied from contact for Montrack reporting purposes</description>
        <label>First Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_in_Family__c</fullName>
        <defaultValue>false</defaultValue>
        <description>copied from Contact for Montrack reporting purposes</description>
        <label>First in Family</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HoldTimeInSeconds__c</fullName>
        <label>HoldTimeInSeconds</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <description>copied over from contact for purpose of Montrack reporting</description>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>International_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <label>International Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>linked contact last name onto activity</description>
        <label>Last Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>user location at time of creation - used for Monash Connect reporting</description>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <description>copied over from contact for purpose of Montrack reporting</description>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MonTrack_Opt_Out_Reason__c</fullName>
        <description>copied from Contact for Montrack reporting purposes</description>
        <label>MonTrack Opt Out Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonTrack_Opt_Out_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>copied from Contact for Montrack reporting purposes</description>
        <label>MonTrack Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offer_Status__c</fullName>
        <description>This describes outcome of the call</description>
        <label>Call Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Accept Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defer Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decline Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undecided</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Original_ID__c</fullName>
        <externalId>true</externalId>
        <label>Original ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Person_ID__c</fullName>
        <description>copied from Contact for Montrack reporting purposes</description>
        <label>Person ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_del__c</fullName>
        <description>copied over from contact for purpose of Montrack reporting</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Projected_Attending_Students__c</fullName>
        <description>Number of students projected to attend a school visit</description>
        <label>Projected Attending Students</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <description>copied over from User at time of record creation</description>
        <label>Queue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reaction_to_Call__c</fullName>
        <description>Used for MonTRACK functionality, captures the sentiment (eg positive or negative) of the student being called.</description>
        <label>Reaction to Call</label>
        <picklist>
            <picklistValues>
                <fullName>Well Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wary/Unsure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hostile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resulting_Enquiry_Status__c</fullName>
        <description>when task is of type &apos;Interaction&apos; the value here is used to update the related case status</description>
        <label>Set Enquiry Status To</label>
        <picklist>
            <picklistValues>
                <fullName>Escalated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <label>Skill</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TalkTime__c</fullName>
        <label>TalkTime</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <description>This describes the user&apos;s role</description>
        <formula>Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User&apos;s Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Type__c</fullName>
        <label>Visit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Visit School for Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit School for Expo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit Monash Campus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WrapupTimeInSeconds__c</fullName>
        <label>WrapupTimeInSeconds</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_10__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this is a Year 10 student</description>
        <label>Year 10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year_11__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this is a Year 11 student</description>
        <label>Year 11</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year_12__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this is a Year 12 student</description>
        <label>Year 12</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ringTimeInSeconds__c</fullName>
        <label>ringTimeInSeconds</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssn__c</fullName>
        <label>ssn</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkTimeInSeconds__c</fullName>
        <label>talkTimeInSeconds</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>